# qwery

./: .gitignore  README.md  pyproject.toml  setup.py
qwery/: __init__.py  test_qwery.py
tests/: conftest.py  test_postgres.py  test_qwery.py
